tests/snapshots/infos/history_hashrate/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - infos
    - history-hashrate
    - foo
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value 'foo' for '<FROM_TS>': invalid digit found in string

For more information, try '--help'.
