tests/snapshots/infos/history_hashrate/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - history-hashrate
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <FROM_TS>

Usage: kermit infos history-hashrate <FROM_TS> [TO_TS]

For more information, try '--help'.
