tests/snapshots/infos/history_hashrate/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - history-hashrate
    - "100"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Time span cannot be greater than Duration(1800000ms)
