tests/snapshots/infos/history_hashrate/two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - history-hashrate
    - "100"
    - "200"
---
success: true
exit_code: 0
----- stdout -----
{
  "hashrate": "0 MH/s"
}

----- stderr -----
